; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/bluetooth/extr_hci_h4.c_h4_close.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/bluetooth/extr_hci_h4.c_h4_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hci_uart = type { %struct.h4_struct* }
%struct.h4_struct = type { i32, i32 }

@.str = private unnamed_addr constant [6 x i8] c"hu %p\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hci_uart*)* @h4_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @h4_close(%struct.hci_uart* %0) #0 {
  %2 = alloca %struct.hci_uart*, align 8
  %3 = alloca %struct.h4_struct*, align 8
  store %struct.hci_uart* %0, %struct.hci_uart** %2, align 8
  %4 = load %struct.hci_uart*, %struct.hci_uart** %2, align 8
  %5 = getelementptr inbounds %struct.hci_uart, %struct.hci_uart* %4, i32 0, i32 0
  %6 = load %struct.h4_struct*, %struct.h4_struct** %5, align 8
  store %struct.h4_struct* %6, %struct.h4_struct** %3, align 8
  %7 = load %struct.hci_uart*, %struct.hci_uart** %2, align 8
  %8 = getelementptr inbounds %struct.hci_uart, %struct.hci_uart* %7, i32 0, i32 0
  store %struct.h4_struct* null, %struct.h4_struct** %8, align 8
  %9 = load %struct.hci_uart*, %struct.hci_uart** %2, align 8
  %10 = call i32 @BT_DBG(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), %struct.hci_uart* %9)
  %11 = load %struct.h4_struct*, %struct.h4_struct** %3, align 8
  %12 = getelementptr inbounds %struct.h4_struct, %struct.h4_struct* %11, i32 0, i32 1
  %13 = call i32 @skb_queue_purge(i32* %12)
  %14 = load %struct.h4_struct*, %struct.h4_struct** %3, align 8
  %15 = getelementptr inbounds %struct.h4_struct, %struct.h4_struct* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @kfree_skb(i32 %16)
  %18 = load %struct.hci_uart*, %struct.hci_uart** %2, align 8
  %19 = getelementptr inbounds %struct.hci_uart, %struct.hci_uart* %18, i32 0, i32 0
  store %struct.h4_struct* null, %struct.h4_struct** %19, align 8
  %20 = load %struct.h4_struct*, %struct.h4_struct** %3, align 8
  %21 = call i32 @kfree(%struct.h4_struct* %20)
  ret i32 0
}

declare dso_local i32 @BT_DBG(i8*, %struct.hci_uart*) #1

declare dso_local i32 @skb_queue_purge(i32*) #1

declare dso_local i32 @kfree_skb(i32) #1

declare dso_local i32 @kfree(%struct.h4_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
